--- a/.project.json
+++ b/.project.json
@@ -18,6 +18,11 @@
       "templateId": "servicecatalog.connectivityComponent",
       "templateVersion": "0.0.0",
       "dateTimeStamp": "Fri, 10 Feb 2017 11:42:39 GMT"
+    },
+    {
+      "templateId": "ui5template.basicSAPUI5ApplicationComponent",
+      "templateVersion": "1.4.0",
+      "dateTimeStamp": "Wed, 15 Feb 2017 12:24:32 GMT"
     }
   ],
   "translation": {
